--- a/cart/templates/cart/detail.html
+++ b/cart/templates/cart/detail.html
@@ -64,6 +64,20 @@
 </tr>
         </tbody>
     </table>
+    {% if recommended_products %}
+        <div class="recommendations cart">
+            <h3>С этими товарами также покупают</h3>
+            {% for p in recommended_products %}
+                <div class="item">
+                    <a href="{{ p.get_absolute_url }}">
+                        <img src="{% if p.image %}{{ p.image.url }}{% else %}
+                        {% static "img/no_image.png" %}{% endif %}">
+                    </a>
+                    <p><a href="{{ p.get_absolute_url }}">{{ p.name }}</a></p>
+                </div>
+            {% endfor %}
+        </div>
+    {% endif %}
     <form action="{% url "coupons:apply" %}" method="post">
         {{ coupon_apply_form }}
             <input type="submit" value="Apply">
