--- a/orders/templates/orders/order/pdf.html
+++ b/orders/templates/orders/order/pdf.html
@@ -1,14 +1,14 @@
 <html>
   <body>
-    <h1>My Shop</h1>
+    <h1>Онлайн магазин</h1>
     <p>
-      Invoice no. {{ order.id }}</br>
+      Счёт № {{ order.id }}</br>
       <span class="secondary">
         {{ order.created|date:"M d, Y" }}
       </span>
     </p>
 
-    <h3>Bill to</h3>
+    <h3>Покупатель</h3>
     <p>
       {{ order.first_name }} {{ order.last_name }}<br>
       {{ order.email }}<br>
@@ -16,14 +16,14 @@
       {{ order.postal_code }}, {{ order.city }}
     </p>
 
-    <h3>Items bought</h3>
+    <h3>Список товаров</h3>
     <table>
       <thead>
         <tr>
-          <th>Product</th>
-          <th>Price</th>
-          <th>Quantity</th>
-          <th>Cost</th>
+          <th>Наименование</th>
+          <th>Цена</th>
+          <th>Количество</th>
+          <th>Сумма</th>
         </tr>
       </thead>
       <tbody>
@@ -36,14 +36,14 @@
           </tr>
         {% endfor %}
         <tr class="total">
-          <td colspan="3">Total</td>
+          <td colspan="3">Итого</td>
           <td class="num">${{ order.get_total_cost }}</td>
         </tr>
       </tbody>
     </table>
 
     <span class="{% if order.paid %}paid{% else %}pending{% endif %}">
-      {% if order.paid %}Paid{% else %}Pending payment{% endif %}
+      {% if order.paid %}Оплачен{% else %}Ожидает оплаты{% endif %}
     </span>
   </body>
 </html>
